# folder-compare

./: Cargo.toml  README.md  clippy.toml  deny.toml
crates/fc-ai/: Cargo.toml
crates/fc-ai/src/: lib.rs
crates/fc-ai/src/api/: analyze.rs  mod.rs
crates/fc-ai/src/domain/: error.rs  mod.rs  provider.rs  types.rs
crates/fc-ai/src/providers/: mod.rs  openai_compatible.rs
crates/fc-ai/src/services/: analyzer.rs  mock_provider.rs  mod.rs  prompt.rs  truncation.rs
crates/fc-ai/tests/: phase8_minimal_ai.rs
crates/fc-core/: Cargo.toml
crates/fc-core/src/: lib.rs
crates/fc-core/src/api/: compare.rs  diff.rs  mod.rs
crates/fc-core/src/domain/: diff.rs  entry.rs  error.rs  mod.rs  options.rs  report.rs
crates/fc-core/src/ffi/: mod.rs  stable_types.rs
crates/fc-core/src/infra/: fs.rs  mod.rs  path_norm.rs
crates/fc-core/src/services/: classifier.rs  comparer.rs  hasher.rs  large_dir.rs  mod.rs  scanner.rs  text_diff.rs  text_loader.rs
crates/fc-core/tests/: compare_dirs_phase3.rs  diff_text_file_phase6.rs  file_compare_phase4.rs  protection_phase7.rs  text_compare_phase5.rs
crates/fc-ui-slint/: Cargo.toml
crates/fc-ui-slint/src/: app.rs  bridge.rs  commands.rs  compare_file.rs  compare_file_view.slint  compare_foundation.rs  compare_tree.rs  compare_view.slint  context_menu.rs  folder_picker.rs  font_resolver.rs  icons.slint  macos_font_bootstrap.rs  main.rs  navigator_tree.rs  navigator_tree.slint  presenter.rs  settings.rs  state.rs  toast_controller.rs  ui_palette.slint  view_models.rs  window_chrome.rs
crates/fc-ui-slint/src/tests/: bridge_tests.rs  fixtures.rs  navigator_tree_tests.rs  presenter_foundation_tests.rs  state_foundation_tests.rs
docs/: architecture.md  macos-immersive-title-bar-design-2026-03.md  macos-pingfang-tofu-root-cause-and-fix-2026-03.md  macos_dmg.sh  phase 目标及验收快照模板.md  phase-15-upgrade-checklists.md  phase-18-tree-component-design-analysis-2026-03.md  testing-guidelines.md  thread-context.md  ui-bug-root-cause-and-fix-plan-2026-03.md  upgrade-plan-rust-1.94-slint-1.15.md
docs/assets/: icon.icns
