[workspace]
resolver = "2"
members = [
    "crates/fc-core",
    "crates/fc-ai",
    "crates/fc-ui-slint",
]

[workspace.package]
version = "0.2.18"
edition = "2024"
rust-version = "1.94"
license = "MIT OR Apache-2.0"
authors = ["compare-rs contributors"]

[workspace.dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
tracing = "0.1"
fc-core = { path = "crates/fc-core" }
fc-ai = { path = "crates/fc-ai" }
slint = "=1.15.1"
slint-build = "=1.15.1"
smol_str = "=0.3.2"
