[package]
name = "fc-ai"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
fc-core.workspace = true
serde.workspace = true
serde_json = "1"
thiserror.workspace = true
tracing.workspace = true
ureq = { version = "2.10", features = ["json"] }

[dev-dependencies]
