[package]
name = "fc-ui-slint"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
fc-core.workspace = true
fc-ai.workspace = true
slint.workspace = true
smol_str.workspace = true
tracing.workspace = true
serde.workspace = true
toml = "0.8"

[build-dependencies]
slint-build.workspace = true

[dev-dependencies]
tempfile = "3.12"
